--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -1,7 +1,11 @@
 {
   "env": {
     "node": true,
-    "es2021": true
+    "es2021": true,
+    "es6": true
+  },
+  "engines": {
+    "node": "detect"
   },
   "extends": ["eslint:recommended", "plugin:node/recommended", "prettier"],
   "parserOptions": {
